# smart-comp-basic

./: .gitignore  HypTest.spec  README.md  analysis.py  cli.py  config.txt  descriptive.txt  htt.spec  input-Apr13-15-2025.csv  input-Apr13-15-2025_2.csv  input-Apr16-17-2025.csv  input-Apr16-17-2025_2.csv  input1-Dec1-24-all_cleaned.csv  input1-Dec1-24-all_sample.csv  input2-Jan07-25-all.csv  input2-Jan07-25-all_cleaned.csv  input2-Jan07-25-all_sample.csv  interpretation.md  interpretation.py  interpretation.txt  main.py  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  validation.py
analytics/: bootstrapping.py  confidence_int_p95.py  sampling.py
data_input/: extracted-Dec1-24-all.csv
docs/: CR-001_Add_Permutation_Kruskal–Wallis_Test.md  CR-002_Configurable_percentile_selection.md  WHL_FOR_SMART_COMP_WEB.md
modules/: analysis.py  config.py  config_handler.py  hypothesis.py  input_handler.py  interpretation.py  logger.py  output.py  sampling_utils.py  utils.py  validation.py
reports/: p95_intensity.py
smart_comp/: __init__.py
smart_comp/analysis/: __init__.py  descriptive.py
smart_comp/cli/: __init__.py  app.py  kw_permutation.py
smart_comp/config/: __init__.py  loader.py
smart_comp/interpretation/: __init__.py  engine.py
smart_comp/io/: __init__.py  folder_loader.py  (+3 more)
tests/: test_analysis.py  test_bootstrap_percentiles.py  test_cli.py  test_folder_loader.py  test_hypothesis.py  test_input_handler.py  test_interpretation.py  test_kruskal.py  test_kw_permutation_cli.py  test_sampling_utils.py  test_unit_parser.py  test_validation.py
(+19 files in other folders)
