[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "smart-comp"
version = "0.1.1"
description = "Smart‑Comp statistical CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "diptest>=0.5.0",
    "openai>=1.30"
]